samples/_failures_safe/1761176029_cea03c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_383e2fd3.c: In function ‘main’:
./samples/SAFE/__tmp_383e2fd3.c:167:5: error: expected expression at end of input
  167 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_383e2fd3.c:167:5: error: expected declaration or statement at end of input
